(controller) Fixing tickets #56 and #57 - extolling the last command sent and changing color on mobile interaction

--- a/static/sass/controller.scss
+++ b/static/sass/controller.scss
@@ -107,3 +107,8 @@ body {
 .controller-modal #error-msg {
     color: red;
 }
+
+#chosen-commands-list li span {
+    font-size: 24pt;
+    color: #73D925;
+}
